# syc-file

./: .gitignore  ARCHITECTURE.md
.opencode/plans/: migration-plan.md
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
filesync-desktop/: package.json  pnpm-lock.yaml  vite.config.ts
filesync-desktop/src/: App.vue
filesync-desktop/src-tauri/: Cargo.toml
filesync-desktop/src-tauri/capabilities/: default.json
filesync-desktop/src-tauri/src/: app_paths.rs  base_store.rs  config.rs  device.rs  lib.rs  logger.rs  sync_config.rs  sync_engine.rs  upload_worker.rs  watcher.rs  ws_client.rs
filesync-desktop/src-tauri/src/api/: client.rs  mod.rs  routes.rs
filesync-desktop/src-tauri/src/api/file/: api.rs  mod.rs  params.rs  response.rs
filesync-desktop/src-tauri/src/api/sync/: api.rs  params.rs  response.rs
filesync-desktop/src-tauri/src/api/user/: api.rs  params.rs  response.rs
filesync-desktop/src-tauri/src/api/ws/: types.rs
filesync-desktop/src/api/: http.ts  platform.ts
filesync-desktop/src/request/: index.ts
filesync-desktop/src/router/: useRouter.ts
new_server/: SYNC_PROTOCOL.md  go.mod  go.sum
new_server/cmd/: main.go
new_server/config/: config.go  config.yaml
new_server/internal/database/: db_connect.go
new_server/internal/handler/: routers.go
new_server/internal/middleware/: logger.go
new_server/internal/model/: Device.go  DictData.go  DictType.go  File.go  (+11 more)
new_server/sql/: init_mysql.sql
rootinstaller/app/: build.gradle.kts
(+196 files in other folders)
